--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <!-- Slide 2 of 6 -->
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="images/HTML_CSS_and_JavaScript.jpeg" alt="HTML, CSS, and JS logos"> 
-                        <div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, JavaScript,</div>
+                        <div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, SQL, JavaScript and C#.</div>
                     </div>
                     <!-- Slide 3 of 6 -->
                     <div class="mySlides fade">
@@ -72,7 +72,7 @@
                     <!-- Slide 4 of 6 -->
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="images/C_Sharp_and_Dot_NET.png" alt="C# logo">
-                        <div class="text">C#, .NET Framework, ASP.NET, MVC, </div>
+                        <div class="text">C#, .NET Framework, ASP.NET, MVC. </div>
                     </div>
                     <!-- Slide 5 of 6 -->
                     <div class="mySlides fade">
@@ -115,8 +115,7 @@
                     Hi, my name is Uran and I work remotely as a consulting data analyst. I am passionate about working with
                     organisations wanting to gain value and make in impact, from the first ideas around what you want to
                     measure and how to capture data accurately, through data preparation, analysis and management, all the
-                    way to actionable presentation of insights. I can support each step of the process to enable your
-                    organisation in making evidence-driven decisions.
+                    way to actionable presentation of insights. I am also a software developer and have a good knowledge of HTML, CSS, JavaScript and C#.
                     <br>
                     <br>I am available for short-term projects and longer-term consulting contracts. Please <a onclick="openForm()" class="contact">Contact</a> me below!
                 </p>
@@ -128,9 +127,9 @@
             <!-- Left column -->
             <div class="Column_1">
                 <h1>GitHub</h1>
-                <p>You can view my projects on my GitHub profile here:
+                <p>You can view some of small projects I made using C# and .NET Framework on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://nomadway.github.io/" target="_blank"> My Github</a></p>
+                    <p class="center"><a href="https://github.com/nomadway/Basic-C-Sharp-Projects/tree/main/Basic-C%23-Programs" target="_blank"> My Github</a></p>
                 </p>
             </div>
             <!-- Right column -->
